--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<!-- Add CSS at the head of HTML file -->
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
-		<!-- Your code goes here-->
-
-	<!-- Add JS at the bottom of HTML file --> 
-        <script src="./js/main.js"></script>
-</body>
+  <head>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <div class="experiment-area">
+      <img class="chamber" src="./images/stability-chamber-2.png" alt="" />
+    </div>
+    <script src="./js/main.js"></script>
+  </body>
 </html>
