--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -5,20 +5,9 @@
     <link rel="stylesheet" href="./css/beaker.css" />
     <link rel="stylesheet" href="./css/cylinder.css" />
     <link rel="stylesheet" href="./css/microwave.css" />
-    <!-- <link rel="stylesheet" href="./css/conical-flask.css" /> -->
   </head>
   <body>
     <div class="experiment-area">
-      <!-- <div class="sediment-agent">
-        <img src="./images/pink-powder.png" alt="" />
-        <img src="./images/pink-powder.png" alt="" />
-        <img src="./images/pink-powder.png" alt="" />
-        <img src="./images/pink-powder.png" alt="" />
-
-        <img src="./images/yellow-powder.png" alt="" />
-        <img src="./images/yellow-powder.png" alt="" />
-        <img src="./images/yellow-powder.png" alt="" />
-      </div> -->
       <div class="measuring-cylinder">
         <span>
           <div class="cylinder" id="zero"><div class="sediment"></div></div>
@@ -40,21 +29,12 @@
 
       <!-- bottom row -->
       <div class="beakers">
-        <!-- <div id="conical-flask"><div id="sediment"></div></div> -->
         <div class="beaker" id="ethanol"><div class="sediment"></div></div>
         <div class="beaker" id="aspirin"><div class="sediment"></div></div>
         <div class="beaker" id="nhcl" data-after="NHCL">
           <div class="sediment"></div>
         </div>
-        <!-- <img src="./images/conical-flask.png" alt="" />
-        <img src="./images/conical-flask.png" alt="" />
-        <img src="./images/conical-flask.png" alt="" />
-        <img src="./images/conical-flask.png" alt="" /> -->
       </div>
-      <!-- <div class="mortar-pestle">
-        <img src="./images/mortar.png" class="mortar" alt="" />
-        <img src="./images/pestle.png" class="pestle" alt="" />
-      </div> -->
 
       <div class="microwave">
         <div class="store">
@@ -111,7 +91,6 @@
     </div>
 
     <script src="./js/main.js"></script>
-    <!-- <canvas id="canvas"></canvas>
-    <script src="./js/canvas.js"></script> -->
+    <script src="./js/accordion.js"></script>
   </body>
 </html>
