--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -59,30 +59,43 @@
           </div>
           <div class="accordion-content">
             <ol>
-              <li>Click on sediment itself to place it inside mortar</li>
-              <li>Click on pestle to start grinding sediment</li>
+              <li>Click on NHCL to heat it upto 50° C</li>
+
               <li>
-                Click on water beaker to add some in mortar while grinding
+                Click on ethanol to add 1 or 2ml of alcohol(ethanol) into
+                aspirin beaker to dissolve it
               </li>
               <li>
-                Choose an empty beaker in which you want to pours the sediment
-                inside mortar
+                Now, click on hot NHCL(that was kept in water bath) to add 90ml
+                of NHCL into dissolved aspirin.
               </li>
               <li>
-                After empty beaker had moved closed to the mortar, click mortar
-                to pour it inside empty beaker
+                After this, click on aspirin beaker to shake it, so that
+                dissolved aspirin don't get precipitated and gets dissolved with
+                NHCL.
               </li>
               <li>
-                Now after this click on any measuring cylinder you want to
-                choose.
+                Now again click on NHCL beaker to finally add remaining 10 ml of
+                0.1N Hydrochloric acid solution.
+              </li>
+              <li>Again, click on aspirin beaker to shake it.</li>
+              <li>
+                After this, withdraw samples from the solution after 10, 20, 30,
+                40, 50 and 60 minutes time period and fill it in to the
+                respective tubes with marking by just click on that inteded
+                tube.
               </li>
               <li>
-                After measuring cylinder has stoped moving, click on beaker
-                filled with sediment to pour it inside measuring cylinder
+                Click on the respective tubes again to add 5 ml of ferric
+                nitrate solution to each test tube, that is clicked.
               </li>
               <li>
-                Now, after measuring cylinder have been filled click on it to
-                move it back to its initial position
+                Measure the absorbance of the samples at 547nm using suitable
+                instrumment and record the observations
+              </li>
+              <li>
+                Plot a graph by taking time on x-axis and log percent aspirin
+                un-decomposed (log E) on y axis
               </li>
             </ol>
           </div>
